--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "@repo/logger": "*",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -26,6 +30,7 @@
     "@repo/jest-presets": "*",
     "@repo/typescript-config": "*",
     "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
