--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@repo/ui": "*",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tanstack/react-query": "^5.65.1",
+    "axios": "^1.7.9",
     "next": "^14.1.1",
+    "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "*"
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
