--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-docker",
-  "version": "0.0.0",
+  "name": "pokeapp",
+  "version": "1.0.0",
   "private": true,
   "workspaces": [
     "apps/*",
