--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@repo/logger": "*",
-    "axios": "^1.7.9",
+    "@repo/shared-types": "*",
+    "axios": "1.4.0",
+    "axios-cache-interceptor": "^1.6.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "uuid": "^11.0.5"
