--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,24 +9,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.5",
+    "@repo/shared-types": "*",
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.65.1",
-    "axios": "^1.7.9",
+    "axios": "1.4.0",
+    "clsx": "^2.1.1",
     "next": "^14.1.1",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
+    "@repo/eslint-config": "*",
+    "@repo/typescript-config": "*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
     "typescript": "5.5.4"
   }
 }
