--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "tsconfig-paths": "^4.2.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
