modified imports in api

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2015"],
     "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "rootDir": "./src"
   },
   "exclude": ["node_modules"],
   "include": ["src"]
