--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -15,7 +15,7 @@ RUN turbo prune web --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
-ENV NEXT_PUBLIC_API_BASE_URL ''
+ENV NEXT_PUBLIC_API_BASE_URL 'https://pokeapp-api.rhythmbhiwani.in'
 RUN apk update
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
@@ -37,7 +37,7 @@ COPY --from=builder /app/out/full/ .
 RUN yarn turbo build
 
 FROM base AS runner
-ENV NEXT_PUBLIC_API_BASE_URL ''
+ENV NEXT_PUBLIC_API_BASE_URL 'https://pokeapp-api.rhythmbhiwani.in'
 
 WORKDIR /app
 
